docs phrasing updates

--- a/distribution/docs/src/main/resources/content/_reference/_appReferences/mg-spatial.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_appReferences/mg-spatial.adoc
@@ -49,8 +49,8 @@ index again.
 
 === Standalone Solr Offline Gazetteer Feature
 
-The Standalone Solr Offline Gazetteer is meant to to be a reflection of the gazetteer data stored
-in the catalog while not being mixed in with all the other data. This allows the core to be
+The Standalone Solr Offline Gazetteer is a reflection of the gazetteer data stored
+in the catalog but separated from other data. This allows the core to be
 separately reindexed much quicker than the the entire catalog core.
 
 ====  Installing Standalone Solr Offline Gazetteer
@@ -71,15 +71,13 @@ created)
 ==== Special Note Regarding Installation
 
 If the Spatial Geocoding Offline Catalog bundle and the bundle using the Gazetteer query service
-(EG, Intrigue) are both already running, you will need to restart the bundles consuming the service
-(EG, Intrigue) in order to pick up the correct one. The Standalone Solr Offline Gazetteer has a
-service ranking of 80, which should win against the catalog gazetteer query service (with ranking
-50).
+(for example, Intrigue) are both already running, you will need to restart the bundles consuming the service
+(for example, Intrigue) in order to pick up the correct one.
 
 ==== Building the suggester index on Standalone Solr Offline Gazetteer
 
 The suggester index will be built when any of the other methods of building the catalog gazetteer
-are ran, along with on initial install. So you can run `gazetteer:build-suggester-index` to build
+are run, along with on initial install. So you can run `gazetteer:build-suggester-index` to build
 the suggester.
 
 Another option is to send a build request via a solr client. An example of this is done through
