--- a/distribution/docs/src/main/resources/content/_integrating/_endpoints/query-endpoints.adoc
+++ b/distribution/docs/src/main/resources/content/_integrating/_endpoints/query-endpoints.adoc
@@ -1,7 +1,7 @@
 :title: Queries Endpoint
 :type: endpoint
 :status: published
-:operations: crud
+:operations: query 
 :link: _queries_endpoint
 :summary: To perform CRUD (Create, Read, Update, Delete) operations on query metacards in the catalog, work with one of these endpoints.
 
