DDF-6177 adding ID of Metacard Validators to docs

--- a/distribution/docs/src/main/resources/content/_managing/_running/validator-plugins.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_running/validator-plugins.adoc
@@ -23,7 +23,6 @@ ingested is valid. Below is a list of the validators run against the data ingest
 
 === Validators run on ingest
 
-* *TDF Schema Validation Service*: This service validates a TDO against a TDF schema.
 * *Size Validator*: Validates the size of an attribute's value(s).
 * *Range Validator*: Validates an attribute's value(s) against an *inclusive* numeric range.
 * *Enumeration Validator*: Validates an attribute's value(s) against a set of acceptable values.
@@ -32,8 +31,12 @@ validating that they are in the future.
 * *Past Date Validator*: Validates an attribute's value(s) against the current date and time,
 validating that they are in the past.
 * *ISO3 Country Code Validator*: Validates an attribute's value(s) against the ISO_3166-1 Alpha3 country codes.
-* *Pattern Evaluator*: Validates an attribute's value(s) against a regular expression.
+* *Pattern Validator*: Validates an attribute's value(s) against a regular expression.
 * *Required Attributes Metacard Validator*: Validates that a metacard contains certain attributes.
+- ID: *ddf.catalog.validation.impl.validator.RequiredAttributesMetacardValidator*
 * *Duplication Validator*: Validates metacard against the local catalog for duplicates based on configurable attributes.
+- ID: *org.codice.ddf.validator.metacard.duplication.DuplicationValidator*
 * *Relationship Validator*: Validates values that an attribute *must have*, *can only have*, and/or *can't have*.
+- ID: *ddf.catalog.validation.impl.validator.RelationshipValidator*
 * *Metacard WKT Validator*: Validates a location metacard attribute (WKT string) against valid geometric shapes.
+- ID: *org.codice.ddf.validator.metacard.wkt.MetacardWktValidator*
