--- a/distribution/docs/src/main/resources/content/_reference/_appReferences/mg-spatial.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_appReferences/mg-spatial.adoc
@@ -50,22 +50,24 @@ index again.
 === Standalone Solr Offline Gazetteer Feature
 
 The Standalone Solr Offline Gazetteer is a reflection of the gazetteer data stored
-in the catalog but separated from other data. This allows the core to be
-separately reindexed much quicker than the the entire catalog core.
+in the catalog but separated from other data. This allows the suggester to be separately rebuilt
+much quicker than for the entire catalog collection.
+
+
 
 ====  Installing Standalone Solr Offline Gazetteer
 
 The Standalone Solr Offline Gazetteer is not installed by default but can be installed by running
 `feature:install catalog-solr-offline-gazetteer`. This will install:
 
-* The plugin that intercepts gazetteer metacard creates/updates/deletes to the catalog core
-(and stores them in the standalone solr gazetteer core)
+* The plugin that intercepts gazetteer metacard creates/updates/deletes to the catalog collection
+(and stores them in the standalone solr gazetteer collection)
 * The gazetteer query service which registers the Query component that responds to requests from
 the UI gazetteer search box
-* The `offline-solr-gazetteer:removeall` command which will delete all records in the standalone
-solr gazetteer core
+* The `offline-solr-gazetteer:removeall` command which will delete all records in the gazetteer
+collection.
 * The `offline-solr-gazetteer:synccatalog` command which will sync with the catalog and update all
-records in the standalone solr gazetteer core to reflect it (or add them if they are not yet
+records in the gazetteer collection to reflect it (or add them if they are not yet
 created)
 
 ==== Special Note Regarding Installation
@@ -77,11 +79,11 @@ If the Spatial Geocoding Offline Catalog bundle and the bundle using the Gazette
 ==== Building the suggester index on Standalone Solr Offline Gazetteer
 
 The suggester index will be built when any of the other methods of building the catalog gazetteer
-are run, along with on initial install. So you can run `gazetteer:build-suggester-index` to build
-the suggester.
+are run, along with on initial install. So you can run `gazetteer:build-suggester-index` or
+`offline-solr-gazetteer:build-suggester-index` to build the suggester.
 
 Another option is to send a build request via a solr client. An example of this is done through
-the Solr Dashboard after selecting the `gazetteer` core and clicking `query`.
+the Solr Dashboard after selecting the `gazetteer` collection and clicking `query`.
 Ensure that the Request-Handler (qt) is set to `/suggest` and then in the 'Extra Parameters' field
 add `suggest.build=true&suggest.dictionary=suggestPlace&suggest.q=bla`.
 
