--- a/distribution/docs/src/main/resources/content/_quickstart/quickstart-intro.adoc
+++ b/distribution/docs/src/main/resources/content/_quickstart/quickstart-intro.adoc
@@ -20,6 +20,6 @@ For complete installation and configuration steps, see <<{managing-prefix}instal
 These steps will demonstrate:
 
 - [*] <<{quickstart-prefix}quick_install_prerequisites,Prerequisites>>.
-- [*] <<{quickstart-prefix}quick_install_of_solr, Quick Install of Solr>>.
+- [*] <<{quickstart-prefix}quick_install_of_solrcloud,Quick Install of SolrCloud>>.
 - [*] <<{quickstart-prefix}quick_install_of_${branding-lowercase},Quick Install of ${branding}>>.
 
