--- a/distribution/docs/src/main/resources/content/_reference/_appReferences/mg-spatial.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_appReferences/mg-spatial.adoc
@@ -40,7 +40,7 @@ The resource argument can be one of three types:
 The `-c` or `--create` flag can be used to clear out the existing gazetteer metacards before adding new entries.
 
 |`build-suggester-index`
-|Builds the Solr suggester index used for placename autocompletion in Intrigue when using the
+|Builds the Solr suggester index used for placename autocompletion when using the
 offline gazetteer. This index is built automatically whenever gazetteer metacards are created,
 updated, or deleted, but if those builds fail then this command can be used to attempt to build the
 index again.
