--- a/distribution/docs/src/main/resources/content/_reference/_tables/RedirectServlet.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/RedirectServlet.adoc
@@ -20,7 +20,7 @@
 |defaultUri
 |String
 |Specifies the redirect URI to use when accessing the /search URI.
-|`${org.codice.ddf.external.context}/search/catalog/`
+|`${org.codice.ddf.external.context}/search/simple/`
 |true
 
 |===
