DDF-6215 Upgrade to Karaf 4.2.9 (#6216)
* DDF-6215 Upgrade to Karaf v4.2.9

* DDF-6215 Move DelegateServletFilter to SercurityFilter chain

* DDF-6215 Move DelegatingSecurityFilter to the Jetty Handler chain

* DDF-6215 Address PR comments

* DDF-6215 Move HttpFilter interface to new bundle and use service ranking to order HttpFilters

* DDF-6215 Update javadoc for DelegatingHttpFilterHandler

* DDF-6215 Fix formatting

--- a/distribution/docs/src/main/resources/content/_architectures/_securityFramework/realms.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_securityFramework/realms.adoc
@@ -51,7 +51,7 @@ They are passed in the `AuthorizationInfo` of the Subject along with the permiss
 |Description
 
 |org.codice.ddf.platform.filter.delegate.DelegateServletFilter
-|The `DelegateServletFilter` detects any servlet filters that have been exposed as OSGi services implementing `org.codice.ddf.platform.filter.SecurityFilter` and places them in-order in front of any servlet or web application running on the container.
+|The `DelegatingHttpFilterHandler` detects any servlet filters that have been exposed as OSGi services implementing `org.codice.ddf.platform.filter.SecurityFilter` and places them in-order in front of any servlet or web application running on the container.
 
 |org.codice.ddf.security.filter.websso.WebSSOFilter
 |This filter is the main security filter that works with a number of handlers to protect a variety of web contexts, each using different authentication schemes and policies.
