--- a/distribution/docs/src/main/resources/content/_configuring/content-directory-monitor.adoc
+++ b/distribution/docs/src/main/resources/content/_configuring/content-directory-monitor.adoc
@@ -7,7 +7,7 @@
 
 == {title}
 
-The:q Content Directory Monitor (CDM) provides the capability to easily add content and metacards into the ${ddf-catalog} by placing a file in a directory.
+The Content Directory Monitor (CDM) provides the capability to easily add content and metacards into the ${ddf-catalog} by placing a file in a directory.
 
 === Installing the Content Directory Monitor
 
@@ -46,10 +46,7 @@ If a CDM configuration is deleted, then the corresponding permissions that were 
 .Content Directory Monitor Permissions
 [IMPORTANT]
 ====
-When configuring a Content Directory Monitor, make sure to set permissions on the new directory to allow ${branding} to access it.
-Setting permissions should be done *before* configuring a CDM.
-Also, don't forget to add permissions for resources outside of the monitored directory.
-See <<{managing-prefix}configuring_permissions_for_the_content_directory_monitor,Configuring Permissions for the Content Directory Monitor>> for in-depth instructions on configuring permissions.
+When configuring a Content Directory Monitor, make sure to set permissions on the new directory to allow ${branding} to access it. Setting permissions should be done *before* configuring a CDM. Also, don't forget to add permissions for products outside of the monitored directory. See <<{managing-prefix}configuring_permissions_for_the_content_directory_monitor,Configuring Permissions for the Content Directory Monitor>> for in-depth instructions on configuring permissions.
 ====
 
 [NOTE]
@@ -60,8 +57,7 @@ If there's a metacard that points to a resource outside of the CDM, then you mus
 .Monitoring Directories In Place
 [WARNING]
 ====
-If monitoring a directory in place, then the <<{developing-prefix}url_resource_reader, URL Resource Reader>> must be configured prior to configuring the CDM to allow reading from the configured directory.
-This allows the ${ddf-catalog} to download the resources.
+If monitoring a directory in place, then the <<{developing-prefix}url_resource_reader, URL Resource Reader>> must be configured prior to configuring the CDM to allow reading from the configured directory. This allows the ${ddf-catalog} to download the products.
 ====
 
 Configure the CDM from the ${admin-console}:
@@ -150,9 +146,22 @@ malicious or unwanted data from being ingested into DDF.  While the CDM automati
 an operating system automatically generates files that should not be ingested.  One such example of this is "thumbs.db" in Windows.
 This file type and any temporary files are included in the blacklist.
 
-.Errors
-If the CDM fails to read the file, an error will be logged in the CDM log. If the directory monitor is
-configured to *Delete* or *Move*, the original file is also moved to the `\.errors` directory.
+.Timeout
+CDM will expire files whose processing times exceed a specified threshold. By default, that threshold is 5 minutes. After expiration, CDM will not attempt to ingest the file until it changes have been made.
+[TIP]
+====
+The expiration time can be configured by setting *org.codice.ddf.catalog.content.monitor.expirationTime* in "etc/custom.system.properties"
+====
+
+.File Size Limit
+CDM will not ingest files beyond a certain size. By default, the maximum file size is 1 GB.
+[TIP]
+====
+The size limit can be adjusted by setting the following in *etc/custom.system.properties*
+`org.codice.ddf.catalog.content.monitor.maxFileSizeBytes=[maximum]`
+
+Set the maximum file size as a number of bytes.
+====
 
 .Logging
 CDM will send logs detailing the processing of files in the directory to `cdm.log`.
@@ -164,6 +173,10 @@ The log level for CDM can be set with the following console command. At the DEBU
 log:set DEBUG cdmLogger
 ----
 ====
+
+.Errors
+If the CDM fails to read the file, an error will be logged in the ingest log. If the directory monitor is
+configured to *Delete* or *Move*, the original file is also moved to the `\.errors` directory.
 
 .Other
 * Multiple directories can be monitored. Each directory has an independent configuration.
