G-9814 add validation config option

--- a/distribution/docs/src/main/resources/content/_reference/_tables/catalog.ui.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/catalog.ui.adoc
@@ -253,6 +253,14 @@ Example:
 |true
 |true
 
+|Enable Validation
+|clientValidationEnabled
+|Boolean
+|Enable client-side validation for metacard attributes.
+|true
+|true
+
+
 |Enable Spellcheck
 |spellcheckEnabled
 |Boolean
