[2.19.x] G-9814 add option to toggle client side validation (#6532)
* G-9814 add validation config option

* G-9814 missing return value

* G-9814 address comments

--- a/distribution/docs/src/main/resources/content/_reference/_tables/catalog.ui.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/catalog.ui.adoc
@@ -253,6 +253,14 @@ Example:
 |true
 |true
 
+|Enable Client-side Attribute Validation
+|clientValidationEnabled
+|Boolean
+|Enable client-side validation of metacard attributes. Invalid attribute values are marked with a red 'Not an acceptable value' banner.
+|true
+|false
+
+
 |Enable Spellcheck
 |spellcheckEnabled
 |Boolean
