--- a/distribution/docs/src/main/resources/content/_managing/_configuring/content-directory-monitor.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/content-directory-monitor.adoc
@@ -33,8 +33,10 @@ Configuring a CDM requires adding read and write permissions to the directory be
 After adding permissions, a system restart is required for them to take effect.
 ====
 
+----
 . permission java.io.FilePermission "<DIRECTORY_PATH>", "read";
 . permission java.io.FilePermission "<DIRECTORY_PATH>${/}-", "read, write";
+----
 
 Trailing slashes after <DIRECTORY_PATH> have no effect on the permissions granted. For example, adding a permission for "${/}test${/}path" and "${/}test${/}path${/}" are equivalent. The recursive forms "${/}test${/}path${/}-", and "${/}test${/}path${/}${/}-" are also equivalent.
 
@@ -103,14 +105,20 @@ Regardless of the option, the ${branding} takes each file in a monitored directo
 * If the original file is renamed, the old metacard is deleted and a new metacard is created.
 
 .Parallel Processing
-The CDM supports parallel processing of files (up to 8 files processed concurrently).  This is configured by setting the number of *Maximum Concurrent Files* in the configuration.  A maximum of 8 is imposed to protect system resources.
+The CDM supports parallel processing of files (up to 8 files processed concurrently).
+This is configured by setting the number of *Maximum Concurrent Files* in the configuration.
+A maximum of 8 is imposed to protect system resources.
 
 .Read Lock
-When the CDM is set up, the directory specified is continuously scanned, and files are locked for processing based on the *ReadLock Time Interval*.  This does not apply to the *Monitor in place* processing directive.  Files will not be ingested without having a ReadLock that has observed no change in the file size.
+When the CDM is set up, the directory specified is continuously scanned, and files are locked for processing based on the *ReadLock Time Interval*.
+This does not apply to the *Monitor in place* processing directive.
+Files will not be ingested without having a ReadLock that has observed no change in the file size.
 This is done so that files that are in transit will not be ingested prematurely. The interval should be dependent on the speed of the copy to the directory monitor (ex. network drive vs local disk).
-For local files, the default value of 500 milliseconds is recommended. The recommended interval for network drives is 1000 - 2000 milliseconds.  If the value provided is less than 100, 100 milliseconds will be used.
+For local files, the default value of 500 milliseconds is recommended. The recommended interval for network drives is 1000 - 2000 milliseconds.
+If the value provided is less than 100, 100 milliseconds will be used.
 It is also recommended that the *ReadLock Time Interval* be set to a lower amount of time when the *Maximum Concurrent Files* is set above 1 so that files are
-locked in a timely manner and processed as soon as possible.  When a higher *ReadLock Time Interval* is set, the time it takes for files to be processed is increased.
+locked in a timely manner and processed as soon as possible.
+When a higher *ReadLock Time Interval* is set, the time it takes for files to be processed is increased.
 
 .Attribute Overrides
 The CDM supports setting metacard attributes directly when ${branding} ingests a file. Custom overrides are entered in the form:
@@ -147,8 +155,10 @@ To override attributes that are not part of the metacard type, <<{developing-pre
 
 .Blacklist
 The CDM blacklist uses the "bad.files" and "bad.file.extensions" properties from the custom.system.properties file in "etc/" in order to prevent
-malicious or unwanted data from being ingested into DDF.  While the CDM automatically omits hidden files, this is particularly useful when
-an operating system automatically generates files that should not be ingested.  One such example of this is "thumbs.db" in Windows.
+malicious or unwanted data from being ingested into DDF.
+While the CDM automatically omits hidden files, this is particularly useful when
+an operating system automatically generates files that should not be ingested.
+One such example of this is "thumbs.db" in Windows.
 This file type and any temporary files are included in the blacklist.
 
 .Errors
